--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
     "react-vertical-timeline-component": "^3.5.3",
     "sass": "^1.83.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
